feat: intégration de la touche a et correction du soucis de boucle infinie en cas de boot

--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -1,8 +1,10 @@
-set timeout=5
+set timeout=10
 set default=0
 
-menuentry "Mon Kernel LFS" {
-    multiboot /boot/kernel.elf
-    boot
+menuentry "PainOS" {
+    multiboot /boot/kernel.bin
 }
 
+menuentry "Autre OS" {
+    echo "No other OS yet"
+}
