feat: Unsuccesful attempt to put Nanolinux on PainOS

--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -5,6 +5,11 @@ menuentry "PainOS" {
     multiboot /boot/kernel.bin
 }
 
+menuentry "Nanolinux" {
+    linux /boot/vmlinuz64
+    initrd /boot/corepure64.gz
+}
+
 menuentry "Autre OS" {
     echo "No other OS yet"
 }
